fix: stretch authenticate page

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,7 +6,6 @@
   padding: 10px;
   background-color: transparent;
 
-  flex: 1;
   display: flex;
   justify-content: center;
   @include mobile {
